Add django prices slide

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ layout: default
 {% include no_floats.html %}
 {% include decimal.html %}
 {% include prices.html %}
+{% include django_prices.html %}
