--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@ layout: default
 {% include decimal.html %}
 {% include prices.html %}
 {% include django_prices.html %}
+{% include django_prices_openexchangerates.html %}
