Add thank you page

--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ layout: default
 {% include prices.html %}
 {% include django_prices.html %}
 {% include django_prices_openexchangerates.html %}
+{% include thank_you.html %}
